# quickhyre-forecasting-system

./: .gitignore  Makefile  README.md  pyproject.toml
api/: app.py  data.py  routes.py  schemas.py
config/: settings.py
demo/: compose_ffmpeg.py  generate_video.py  narration_script.md  subtitles.srt
docs/: architecture.md  assumptions.md
scripts/: preprocess.py  serve.py  train_all.py  train_classical.py  train_lstm.py  train_xgboost.py
src/: backtest.py  baseline.py  dataset.py  evaluate.py  features.py  forecast.py  ingest.py  plots.py  report.py  selector.py  split.py  train_classical.py  validate.py
src/models/: base.py  lstm_model.py  prophet_model.py  sarima.py  xgboost_model.py
tests/: conftest.py  test_api.py  test_evaluate.py  test_features.py  test_ingest.py  test_models.py  test_pipeline.py  test_validate.py
