[project]
name = "sales-forecasting"
version = "1.0.0"
description = "QuickHyre Assignment — End-to-end time series forecasting system with REST API"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "torch>=2.0",
    "pmdarima>=2.0",
    "prophet>=1.1",
    "holidays>=0.30",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -q"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
